--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
   "require": {
     "php": "^8.1",
     "drupal/core": "^10.0",
+    "drupal/hook_event_dispatcher": "^4.0",
     "drupal/omnipedia_core": "5.x-dev@dev",
     "drupal/omnipedia_date": "5.x-dev@dev"
   }
