--- a/omnipedia_main_page.info.yml
+++ b/omnipedia_main_page.info.yml
@@ -6,5 +6,6 @@ core_version_requirement: ^10.0
 php: 8.1
 
 dependencies:
+  - hook_event_dispatcher:core_event_dispatcher
   - omnipedia_core:omnipedia_core
   - omnipedia_date:omnipedia_date
