--- a/omnipedia_main_page.info.yml
+++ b/omnipedia_main_page.info.yml
@@ -9,3 +9,4 @@ dependencies:
   - hook_event_dispatcher:core_event_dispatcher
   - omnipedia_core:omnipedia_core
   - omnipedia_date:omnipedia_date
+  - typed_entity:typed_entity
