Switched main page services from omnipedia_core to this module:
Services were added in previous commit 1d6fbf98f4ff374bc0f15e401eac0b2bd83d8067

https://github.com/neurocracy/drupal-omnipedia-core/issues/18

--- a/omnipedia_main_page.services.yml
+++ b/omnipedia_main_page.services.yml
@@ -3,7 +3,8 @@ services:
   omnipedia_main_page.form_system_site_information_settings_event_subscriber:
     class: Drupal\omnipedia_main_page\EventSubscriber\Form\SystemSiteInformationSettingsEventSubscriber
     arguments:
-      - '@omnipedia.wiki_node_main_page'
+      - '@omnipedia_main_page.default'
+      - '@omnipedia_main_page.resolver'
       - '@omnipedia.wiki_node_resolver'
       - '@omnipedia.wiki_node_revision'
       - '@string_translation'
