--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "php": "^8.1",
     "drupal/core": "^10.0",
     "drupal/hook_event_dispatcher": "^4.0",
+    "drupal/omnipedia_access": "5.x-dev@dev",
     "drupal/omnipedia_core": "5.x-dev@dev",
     "drupal/omnipedia_date": "5.x-dev@dev",
     "drupal/typed_entity": "^4.0"
