--- a/omnipedia_main_page.info.yml
+++ b/omnipedia_main_page.info.yml
@@ -7,6 +7,7 @@ php: 8.1
 
 dependencies:
   - hook_event_dispatcher:core_event_dispatcher
+  - omnipedia_access:omnipedia_access
   - omnipedia_core:omnipedia_core
   - omnipedia_date:omnipedia_date
   - typed_entity:typed_entity
