--- a/omnipedia_main_page.services.yml
+++ b/omnipedia_main_page.services.yml
@@ -45,3 +45,23 @@ services:
       - '@omnipedia_main_page.default'
       - '@omnipedia_main_page.resolver'
       - '@omnipedia.wiki_node_route'
+
+  omnipedia_main_page.wiki_node_edit_local_task_event_subscriber:
+    class: Drupal\omnipedia_main_page\EventSubscriber\Menu\WikiNodeEditLocalTaskEventSubscriber
+    arguments:
+      - '@current_route_match'
+      - '@current_user'
+      - '@omnipedia_main_page.resolver'
+      - '@omnipedia.wiki_node_resolver'
+    tags:
+      - { name: 'event_subscriber' }
+
+  omnipedia_main_page.wiki_node_edit_not_found_to_access_denied_event_subscriber:
+    class: Drupal\omnipedia_main_page\EventSubscriber\Omnipedia\WikiNodeEditNotFoundToAccessDeniedEventSubscriber
+    arguments:
+      - '@current_route_match'
+      - '@current_user'
+      - '@omnipedia_main_page.resolver'
+      - '@omnipedia.wiki_node_resolver'
+    tags:
+      - { name: 'event_subscriber' }
