--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
     "php": "^8.1",
     "drupal/core": "^10.0",
     "drupal/hook_event_dispatcher": "^4.0",
-    "drupal/omnipedia_access": "5.x-dev@dev",
-    "drupal/omnipedia_core": "5.x-dev@dev || 6.x-dev@dev",
-    "drupal/omnipedia_date": "5.x-dev@dev",
+    "drupal/omnipedia_access": "^5.0@dev",
+    "drupal/omnipedia_core": "^5.0@dev || ^6.0@dev",
+    "drupal/omnipedia_date": "^5.0@dev",
     "drupal/typed_entity": "^4.0"
   }
 }
